[package]
name = "angolmois"
version = "2.0.0-alpha2"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "Angolmois: The simple BMS player"
homepage = "https://github.com/lifthrasiir/angolmois-rust"
license = "GPL-2.0+"

[dependencies]
sdl2 = "*"
sdl2_mixer = "*"
sdl2_image = "*"

[[bin]]
name = "angolmois"
path = "angolmois.rs"

